[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "Just me studying algorithms."
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.2"
pytest = "^8.4.1"
flake8 = "^7.3.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
